<resources>
    <string name="app_name">BMICalculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="height">Height</string>
    <string name="_0">0</string>
    <string name="cm">Cm</string>
    <string name="calculate">Calculate</string>
    <string name="__0">0</string>
    <string name="you_are_healthy">You are healthy</string>
    <string name="textview">TextView</string>
    <string name="bmi">BMI</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="enter_your_weight">Enter your Name</string>
    <string name="height_cm">Height (Mt)</string>
    <string name="enter_your_height">Enter your Height</string>
    <string name="Calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="recalculate">Recalculate</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="your_weight_in_kg">Your Weight in Kg</string>
    <string name="hey">Hey,</string>
    <string name="your_bmi_is">Your BMI is</string>
    <string name="bmi_info">BMI INFO</string>
    <string name="enter_Your_weight">Enter your weight</string>
    <string name="in">in</string>
    <string name="Cm">cm</string>
    <string name="Height_cm">Height (Cm)</string>
    <string name="Height_in">Height (In)</string>
    <string name="Height_mt">Height (Mt)</string>
    <string name="moe_inbox_notification_title">[LABEL]</string>
</resources>