<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="15dp"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".SplashScreenActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:text="@string/please_enter_your_name"
        android:textColor="@color/card_background"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/enter_your_weight"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:text="@string/weight_kg"
        android:textColor="@color/card_background"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/enter_Your_weight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:text="@string/Height_mt"
        android:textColor="@color/card_background"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/enter_your_height"
        android:inputType="numberDecimal"
        android:padding="12dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radioCm"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_height="wrap_content"
            android:text="Cm" />

        <RadioButton
            android:id="@+id/radioInch"
            android:layout_marginHorizontal="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inch" />

        <RadioButton
            android:id="@+id/radioMt"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="Meter" />

    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="201dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/calculate" />

    <ImageView
        android:layout_width="299dp"
        android:layout_height="195dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/bmi" />


</LinearLayout>